--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Code 128 Deluxe - Générateur gratuit</title>
-  <meta name="description" content="Générateur de code-barres Code 128 gratuit avec téléchargement PNG"/>
+  <title>Code 128 Deluxe + Impression</title>
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.6/dist/JsBarcode.all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <style>
@@ -12,57 +11,44 @@
     @media (prefers-color-scheme: light) {
       :root { --bg: #f8f9fa; --card: white; --text: #333; --accent: #0d6efd; }
     }
-    body {
-      font-family: 'Segoe UI', system-ui, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      margin: 0; padding: 20px; min-height: 100vh;
-      display: flex; flex-direction: column; align-items: center;
-    }
+    body { font-family: 'Segoe UI', system-ui, sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 20px; min-height: 100vh; display: flex; flex-direction: column; align-items: center; }
     .container { max-width: 800px; width: 100%; }
     h1 { margin: 20px 0 10px; color: var(--accent); }
-    .card {
-      background: var(--card);
-      border-radius: 16px;
-      padding: 24px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-      margin-bottom: 20px;
-    }
-    input, select, button {
-      padding: 12px 16px; margin: 8px; border-radius: 8px; font-size: 16px;
-    }
+    .card { background: var(--card); border-radius: 16px; padding: 24px; box-shadow: 0 10px 30px rgba(0,0,0,0.3); margin-bottom: 20px; }
+    input, select, button { padding: 12px 16px; margin: 8px; border-radius: 8px; font-size: 16px; }
     input, select { border: 2px solid #444; background: #333; color: white; }
     input:focus, select:focus { outline: none; border-color: var(--accent); }
     .controls { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; }
-    button {
-      background: var(--accent); color: white; border: none; cursor: pointer;
-      font-weight: bold; transition: 0.2s;
-    }
+    button { background: var(--accent); color: white; border: none; cursor: pointer; font-weight: bold; transition: 0.2s; }
     button:hover { transform: translateY(-2px); box-shadow: 0 5px 15px rgba(137,180,250,0.4); }
-    button:active { transform: translateY(0); }
-    .barcode-container {
-      background: white; padding: 30px; border-radius: 12px; margin: 30px 0;
-      text-align: center; box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    }
+    .barcode-container { background: white; padding: 40px; border-radius: 12px; margin: 30px 0; text-align: center; box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
     #barcode { max-width: 100%; height: auto; }
     .actions { display: flex; flex-wrap: wrap; gap: 12px; justify-content: center; margin-top: 20px; }
     .footer { margin-top: 40px; font-size: 14px; opacity: 0.7; }
+
+    /* Style spécial impression */
+    @media print {
+      body, .container { margin: 0 !important; padding: 0 !important; background: white !important; }
+      .card, .footer, .actions { display: none !important; }
+      .barcode-container { padding: 20mm !important; page-break-inside: avoid; }
+      #barcode { width: 100% !important; height: auto !important; }
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Code 128 Deluxe</h1>
-    <p>Générateur de code-barres gratuit • Téléchargement PNG • Copie directe</p>
+    <p>Générateur gratuit • Téléchargement • Copie • Impression directe</p>
 
     <div class="card">
-      <input type="text" id="texte" placeholder="Entrez votre texte (ex: 1234567890)" value="1234567890" autofocus />
+      <input type="text" id="texte" placeholder="Texte à encoder" value="1234567890" autofocus />
       
       <div class="controls">
         <select id="format">
           <option value="CODE128">CODE128 Auto</option>
-          <option value="CODE128A">CODE128A (ASCII 0-95)</option>
-          <option value="CODE128B">CODE128B (ASCII 32-127)</option>
-          <option value="CODE128C">CODE128C (Chiffres pairs)</option>
+          <option value="CODE128A">CODE128A</option>
+          <option value="CODE128B">CODE128B</option>
+          <option value="CODE128C">CODE128C</option>
         </select>
         <input type="number" id="height" value="120" min="50" max="300" style="width:90px"/> Hauteur
         <input type="number" id="width" value="3" min="1" max="6" style="width:80px"/> Épaisseur
@@ -71,7 +57,8 @@
       <div class="actions">
         <button onclick="generer()">Générer</button>
         <button onclick="telecharger()">Télécharger PNG</button>
-        <button onclick="copier()">Copier dans le presse-papier</button>
+        <button onclick="copier()">Copier</button>
+        <button onclick="window.print()">Imprimer</button>
       </div>
     </div>
 
@@ -80,7 +67,7 @@
     </div>
 
     <div class="footer">
-      100 % gratuit • Zéro pub • Fait avec ❤️ par un dev pour les devs
+      100 % gratuit • Open-source • Parfait pour étiquettes, colis, inventaire
     </div>
   </div>
 
@@ -114,11 +101,11 @@
     function copier() {
       html2canvas(document.querySelector("#capture"), {scale: 2}).then(canvas => {
         canvas.toBlob(blob => navigator.clipboard.write([new ClipboardItem({ 'image/png': blob })]));
-        alert("Copié dans le presse-papier !");
+        alert("Image copiée dans le presse-papier !");
       });
     }
 
-    // Init
+    // Init + mise à jour auto
     generer();
     document.getElementById("texte").addEventListener("input", generer);
     document.querySelectorAll("select, input[type=number]").forEach(el => el.addEventListener("change", generer));
