--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Générateur Code 128 • EAN-13 • QR Code</title>
+  <!-- Librairies -->
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.6/dist/JsBarcode.all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+
   <style>
-    :root { --bg: #1e1e2e; --card: #2d2d44; --text: #cdd6f4; --accent: #89b4fa; }
-    @media (prefers-color-scheme: light) { :root { --bg: #f8f9fa; --card: white; --text: #333; --accent: #0d6efd; } }
-    body { font-family: system-ui, sans-serif; background: var(--bg); color: var(--text); margin:0; padding:20px; display:flex; flex-direction:column; align-items:center; }
+    :root { --bg:#1e1e2e; --card:#2d2d44; --text:#cdd6f4; --accent:#89b4fa; }
+    @media (prefers-color-scheme: light) { :root { --bg:#f8f9fa; --card:white; --text:#333; --accent:#0d6efd; } }
+    body { font-family:system-ui,sans-serif; background:var(--bg); color:var(--text); margin:0; padding:20px; display:flex; flex-direction:column; align-items:center; }
     .container { max-width:800px; width:100%; }
     h1 { color:var(--accent); text-align:center; margin:10px 0 5px; }
-    .card { background:var(--card); border-radius:16px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,0.3); margin-bottom:20px; }
-    input, select, button { padding:12px 16px; margin:6px; border-radius:8px; font-size:16px; }
-    input, select { background:#333; color:white; border:2px solid #444; width:calc(100% - 12px); max-width:500px; }
+    .card { background:var(--card); border-radius:16px; padding:24px; box-shadow:0 10px 30px rgba(0,0,0,.3); margin-bottom:20px; }
+    input, select, button { padding:12px 16px; margin:8px; border-radius:8px; font-size:16px; }
+    input, select { background:#333; color:white; border:2px solid #444; width:100%; max-width:500px; }
     button { background:var(--accent); color:white; border:none; cursor:pointer; font-weight:bold; }
-    button:hover { opacity:0.9; transform:translateY(-2px); }
+    button:hover { opacity:.9; }
     .actions { display:flex; flex-wrap:wrap; gap:12px; justify-content:center; margin-top:15px; }
-    .barcode-container { background:white; padding:40px; border-radius:12px; text-align:center; box-shadow:0 4px 20px rgba(0,0,0,0.1); }
-    #result { width:100%; height:auto; }
+    .barcode-container { background:white; padding:40px; border-radius:12px; text-align:center; }
     canvas, svg { max-width:100%; height:auto; }
   </style>
 </head>
@@ -30,10 +31,10 @@
     <p>Code 128 • EAN-13 • QR Code</p>
 
     <div class="card">
-      <input type="text" id="texte" placeholder="Texte ou numéro" value="1234567890" autofocus />
+      <input type="text" id="texte" placeholder="Texte, URL ou numéro" value="1234567890" autofocus>
 
-      <select id="type" onchange="generer()">
-        <option value="CODE128">Code 128 (Auto)</option>
+      <select id="type">
+        <option value="CODE128">Code 128</option>
         <option value="EAN13">EAN-13</option>
         <option value="QRCODE">QR Code</option>
       </select>
@@ -42,7 +43,7 @@
         <button onclick="generer()">Générer</button>
         <button onclick="telecharger()">Télécharger PNG</button>
         <button onclick="copier()">Copier</button>
-        <button onclick="imprimer()">Imprimer (code seul)</button>
+        <button onclick="imprimer()">Imprimer</button>
       </div>
     </div>
 
@@ -55,41 +56,64 @@
     function generer() {
       const texte = document.getElementById("texte").value.trim();
       const type = document.getElementById("type").value;
-      const container = document.getElementById("result");
-      container.innerHTML = "";
+      const result = document.getElementById("result");
+      result.innerHTML = "";   // vide le conteneur
 
-      if (!texte && type !== "QRCODE") return alert("Entre du texte !");
+      if (!texte && type !== "QRCODE") {
+        result.innerHTML = "<p style='color:red'>Entre du texte !</p>";
+        return;
+      }
 
       if (type === "CODE128") {
         const svg = document.createElement("svg");
-        container.appendChild(svg);
-        JsBarcode(svg, texte, { format: "CODE128", displayValue: true, height: 100, fontSize: 20, margin: 30 });
+        result.appendChild(svg);
+        JsBarcode(svg, texte, {
+          format: "CODE128",
+          displayValue: true,
+          height: 100,
+          fontSize: 20,
+          margin: 30
+        });
 
       } else if (type === "EAN13") {
-        let ean = texte.replace(/\D/g,'').slice(0,12);
-        if (ean.length === 12) ean += calculerCheckDigit(ean);
-        else if (ean.length !== 13) return alert("EAN-13 doit faire 12 ou 13 chiffres");
+        let num = texte.replace(/\D/g, "").substring(0, 12);
+        if (num.length === 12) num += calculCheckDigit(num);
+        if (num.length !== 13) {
+          result.innerHTML = "<p style='color:red'>EAN-13 : 12 ou 13 chiffres requis</p>";
+          return;
+        }
         const svg = document.createElement("svg");
-        container.appendChild(svg);
-        JsBarcode(svg, ean, { format: "EAN13", displayValue: true, height: 120, fontSize: 22, margin: 30 });
+        result.appendChild(svg);
+        JsBarcode(svg, num, {
+          format: "EAN13",
+          displayValue: true,
+          height: 120,
+          fontSize: 22,
+          margin: 30
+        });
 
       } else if (type === "QRCODE") {
         const canvas = document.createElement("canvas");
-        container.appendChild(canvas);
-        QRCode.toCanvas(canvas, texte || "https://github.com", { width: 300, margin: 2, color: { dark: "#000", light: "#fff" } });
+        result.appendChild(canvas);
+        QRCode.toCanvas(canvas, texte || "https://github.com", {
+          width: 300,
+          margin: 2
+        });
       }
     }
 
-    function calculerCheckDigit(ean12) {
+    function calculCheckDigit(ean12) {
       let sum = 0;
-      for (let i = 0; i < 12; i++) sum += (i % 2 === 0 ? 1 : 3) * parseInt(ean12[i]);
+      for (let i = 0; i < 12; i++) {
+        sum += (i % 2 === 0 ? 1 : 3) * parseInt(ean12[i]);
+      }
       return (10 - (sum % 10)) % 10;
     }
 
     function telecharger() {
       html2canvas(document.getElementById("capture"), {scale: 3}).then(canvas => {
         const a = document.createElement("a");
-        a.download = `barcode_${Date.now()}.png`;
+        a.download = "barcode.png";
         a.href = canvas.toDataURL();
         a.click();
       });
@@ -97,9 +121,11 @@
 
     function copier() {
       html2canvas(document.getElementById("capture"), {scale: 2}).then(canvas => {
-        canvas.toBlob(blob => navigatord clipboard.write([new ClipboardItem({"image/png": blob})])
-          .then(() => alert("Copié !"))
-          .catch(() => alert("Erreur copie")));
+        canvas.toBlob(blob => {
+          navigator.clipboard.write([new ClipboardItem({ "image/png": blob })])
+            .then(() => alert("Copié dans le presse-papier !"))
+            .catch(() => alert("Erreur de copie"));
+        });
       });
     }
 
@@ -107,20 +133,25 @@
       const content = document.getElementById("result").innerHTML;
       const win = window.open("", "_blank");
       win.document.write(`
-        <!DOCTYPE html><html><head><title>Impression</title>
+        <!DOCTYPE html>
+        <html><head><title>Impression</title>
         <style>
-          body{margin:0;padding:15mm;background:white;display:flex;justify-content:center;align-items:center;height:100vh;}
-          canvas,svg{width:100%;max-width:100%;height:auto;}
+          body{margin:0;padding:20mm;background:white;display:flex;justify-content:center;align-items:center;height:100vh;}
+          canvas,svg{max-width:100%;height:auto;}
           @media print{@page{margin:5mm;}body{padding:0;}}
-        </style></head><body>${content}
-        <script>window.print(); window.onafterprint=()=>window.close();<\/script>
-        </body></html>`);
+        </style></head>
+        <body>${content}
+          <script>window.print();window.onafterprint=()=>window.close();<\/script>
+        </body>
+        </html>
+      `);
       win.document.close();
     }
 
-    // Démarrage
+    // Lancement automatique
     generer();
     document.getElementById("texte").addEventListener("input", generer);
+    document.getElementById("type").addEventListener("change", generer);
   </script>
 </body>
 </html>
