--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Générateur A4/A3 - Aperçu Compact</title>
+  <title>Générateur codes barres</title>
 
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.6/dist/JsBarcode.all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.4/build/qrcode.min.js"></script>
@@ -112,7 +112,7 @@
 <body>
 
   <aside class="sidebar">
-    <h1 style="margin:0; color:var(--accent);">Générateur PRO</h1>
+    <h1 style="margin:0; color:var(--accent);">Générateur</h1>
     
     <div class="control-group">
       <label>Texte / Chiffres</label>
