--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Générateur Pro - PWA</title>
+  <title>Générateur codes barres</title>
 
   <!-- --- AJOUTS PWA (ICÔNES & MANIFESTE) --- -->
   <meta name="theme-color" content="#89b4fa">
@@ -24,7 +24,7 @@
 <body>
 
   <aside class="sidebar">
-    <h2 class="app-title">Générateur PRO</h2>
+    <h2 class="app-title">Générateur</h2>
     
     <div class="control-group">
       <label>Code (Données)</label>
