--- a/index.html
+++ b/index.html
@@ -280,9 +280,7 @@
 
   <aside class="sidebar">
     <div class="sidebar-header">
-      <div class="app-title">
-        <div class="app-icon">B</div>
-        BarCode Pro
+      <div class="app-title">BarCode Studio <span style="font-size: 0.7em; opacity: 0.6; font-weight: normal;">v2.0</span></div>
       </div>
     </div>
     
