--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Générateur Codes Barres Pro</title>
+  <title>BarCode Studio</title>
   <meta name="theme-color" content="#0f172a">
 
   <!-- Polices Modernes -->
