--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
   <aside class="sidebar">
     <div class="sidebar-header">
       <div class="app-title">
-        <div class="app-icon">B</div>
+        <div class="app-icon"></div>
         GenCodeBarre V2
       </div>
     </div>
