--- a/plaquettes.html
+++ b/plaquettes.html
@@ -309,7 +309,7 @@
   <!-- MAIN PREVIEW -->
   <main class="main-content">
     <div class="toolbar-preview">
-       <span>Zoom</span>
+       <span>Zoom Aperçu</span>
        <input type="range" id="zoomSlider" min="0.4" max="1.5" step="0.1" value="0.7">
     </div>
 
