--- a/plaquettes.html
+++ b/plaquettes.html
@@ -232,6 +232,12 @@
     </div>
 
     <div class="sidebar-content">
+
+      <div class="tabs-nav">
+        <button class="tab-btn active" id="btn-tab-gen" data-target="tab-generator">Éditeur</button>
+        <button class="tab-btn" id="btn-tab-tools" data-target="tab-tools">Données</button>
+      </div>
+      
       
       <!-- IMPORT -->
       <div class="control-group">
