--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     <div class="sidebar-content">
       <div class="tabs-nav">
         <button class="tab-btn active" id="btn-tab-gen" data-target="tab-generator">Éditeur</button>
-        <button class="tab-btn" id="btn-tab-tools" data-target="tab-tools">Données</button>
+        <a href="https://mikefri.github.io/GenCodeBarre/plaquettes.html" class="tab-btn" id="btn-tab-tools">Données</a>
       </div>
 
       <!-- --- ONGLET 1 : GÉNÉRATEUR --- -->
