--- a/plaquettes.html
+++ b/plaquettes.html
@@ -60,6 +60,15 @@
       box-shadow: 4px 0 24px rgba(0,0,0,0.2);
     }
 
+        /* --- ONGLETS --- */
+    .tabs-nav {
+      display: flex;
+      background: #0f172a;
+      padding: 3px;
+      border-radius: var(--radius);
+      border: 1px solid var(--border-subtle);
+    }
+
     .sidebar-header {
       padding: 20px 24px;
       border-bottom: 1px solid var(--border-subtle);
