--- a/plaquettes.html
+++ b/plaquettes.html
@@ -60,13 +60,31 @@
       box-shadow: 4px 0 24px rgba(0,0,0,0.2);
     }
 
-        /* --- ONGLETS --- */
+    /* --- ONGLETS --- */
     .tabs-nav {
       display: flex;
       background: #0f172a;
       padding: 3px;
       border-radius: var(--radius);
       border: 1px solid var(--border-subtle);
+    }
+    .tab-btn {
+      flex: 1; 
+      padding: 8px; 
+      background: transparent; 
+      border: none;
+      color: var(--text-secondary); 
+      cursor: pointer; 
+      font-weight: 500;
+      font-size: 0.85rem;
+      border-radius: 4px; 
+      transition: all 0.15s ease;
+    }
+    .tab-btn:hover { color: #fff; }
+    .tab-btn.active { 
+      background: var(--bg-panel);
+      color: #fff; 
+      box-shadow: 0 1px 2px rgba(0,0,0,0.2);
     }
 
     .sidebar-header {
