Replace button with link for Éditeur tab

--- a/plaquettes.html
+++ b/plaquettes.html
@@ -261,7 +261,7 @@
     <div class="sidebar-content">
 
       <div class="tabs-nav">
-        <button class="tab-btn active" id="btn-tab-gen" data-target="tab-generator">Éditeur</button>
+        <a href="https://mikefri.github.io/GenCodeBarre" class="tab-btn" id="btn-tab-tools">Éditeur</a>
         <button class="tab-btn" id="btn-tab-tools" data-target="tab-tools">Données</button>
       </div>
       
