--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#0f172a">
 
 <link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="manifest.json">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 
   <!-- Polices Modernes -->
@@ -777,7 +778,7 @@
     // ******* AJOUTER CE BLOC *******
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/sw.js')
+        navigator.serviceWorker.register('sw.js')
           .then(registration => {
             console.log('Service Worker enregistré avec succès :', registration.scope);
           })
