--- a/plaquettes.html
+++ b/plaquettes.html
@@ -100,6 +100,17 @@
       <button class="action-btn btn-print" onclick="window.print()">Imprimer</button>
       <button class="action-btn btn-download" id="downloadBtn">Télécharger PNG</button>
     </div>
+
+      <div class="sidebar-footer">
+      <button class="action-btn btn-print" onclick="window.print()">Imprimer</button>
+      <button class="action-btn btn-download" id="downloadBtn">Télécharger PNG</button>
+    </div>
+    
+    <div class="sidebar-signature">
+        Créé par Micfri
+    </div>
+
+  </aside>
   </aside>
 
     <main class="main-content">
